{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 292,
  "lineage": "b8014a96-edb4-8731-4b7c-e6373511aa68",
  "resources": [
    {
      "module": "module.auto_resource",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:security-group/sg-02c8922e57c1a9245",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c8922e57c1a9245",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "417444384459",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fee4e8e5c835545"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2_resource",
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_instance_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:417444384459:instance/i-04096054d0fe73bdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04096054d0fe73bdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "aws-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07efd20eb9dc4f828",
            "private_dns": "ip-10-10-9-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.9.246",
            "public_ip": "3.227.2.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5333730cb62ee72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0721b5f53dead7703"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098043a6bbe36d19c",
            "tags": {
              "Name": "Demo-insta"
            },
            "tags_all": {
              "Name": "Demo-insta"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0721b5f53dead7703"
            ]
          },
          "dependencies": [
            "module.ec2_resource.aws_security_group.sg_demo",
            "module.vpc_resource.aws_subnet.aws_instance_subnet_1",
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_resource",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:security-group/sg-0721b5f53dead7703",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0721b5f53dead7703",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform-SG",
            "name_prefix": "",
            "owner_id": "417444384459",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_instance_VPC_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:internet-gateway/igw-0c3c94c7e9d61d0ad",
            "id": "igw-0c3c94c7e9d61d0ad",
            "owner_id": "417444384459",
            "tags": {
              "Name": "Terra-IGW"
            },
            "tags_all": {
              "Name": "Terra-IGW"
            },
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "dependencies": [
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "aws_instance_VPC_set_main_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daa0d1a8e3962530",
            "original_route_table_id": "rtb-03c07ce163621f619",
            "route_table_id": "rtb-081ef5ad442ea73f0",
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "dependencies": [
            "module.vpc_resource.aws_internet_gateway.aws_instance_VPC_IGW",
            "module.vpc_resource.aws_route_table.aws_instance_VPC_routetable",
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_instance_VPC_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:route-table/rtb-081ef5ad442ea73f0",
            "id": "rtb-081ef5ad442ea73f0",
            "owner_id": "417444384459",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3c94c7e9d61d0ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra-Rute"
            },
            "tags_all": {
              "Name": "Terra-Rute"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_resource.aws_internet_gateway.aws_instance_VPC_IGW",
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_instance_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:subnet/subnet-098043a6bbe36d19c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098043a6bbe36d19c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417444384459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_subnet1"
            },
            "tags_all": {
              "Name": "VPC_subnet1"
            },
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "dependencies": [
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_instance_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:subnet/subnet-0ad37fc4b38a0919c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad37fc4b38a0919c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417444384459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_subnet2"
            },
            "tags_all": {
              "Name": "VPC_subnet2"
            },
            "vpc_id": "vpc-05bf7a91c30de1c3a"
          },
          "dependencies": [
            "module.vpc_resource.aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resource",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_instance_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:vpc/vpc-05bf7a91c30de1c3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-025a13d9c73bb378b",
            "default_route_table_id": "rtb-081ef5ad442ea73f0",
            "default_security_group_id": "sg-0ae339463351e4372",
            "dhcp_options_id": "dopt-08e68b7c747e9d392",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bf7a91c30de1c3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081ef5ad442ea73f0",
            "owner_id": "417444384459",
            "tags": {
              "Name": "Terra-VPC"
            },
            "tags_all": {
              "Name": "Terra-VPC"
            }
          }
        }
      ]
    }
  ]
}